@startuml Database ER Diagram

' ============================================================================
' Database Entity-Relationship Diagram
' ============================================================================
' This diagram shows the database schema for the A/B Testing API.
'
' Tables:
' - api_tokens: API authentication tokens (SHA256 hashed)
' - experiments: A/B test definitions with name, description, status
' - variants: Different versions in an experiment (e.g., Control, Treatment)
' - assignments: Maps users to variants (idempotent, one per user per experiment)
' - events: User actions/conversions with flexible JSON properties
' - feature_flags: Simple on/off toggles with rollout percentage
' - feature_flag_overrides: Per-user overrides for feature flags
' - feature_flag_rollout_assignments: Persistent rollout decisions (idempotent)
'
' Key constraints:
' - api_tokens: UNIQUE(token_hash) for secure token lookup
' - assignments: UNIQUE(experiment_id, user_id) ensures idempotency
' - feature_flag_overrides: UNIQUE(feature_flag_id, user_id) one override per user
' - feature_flag_rollout_assignments: UNIQUE(feature_flag_id, user_id) ensures idempotency
' ============================================================================

!define TABLE(x) entity x << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

skinparam backgroundColor white
skinparam entity {
    BackgroundColor LightYellow
    BorderColor DarkOrange
}

title A/B Testing API - Database Schema (PostgreSQL)

TABLE(api_tokens) {
    PK(id) : INTEGER
    --
    name : VARCHAR
    token_hash : VARCHAR <<unique>>
    is_active : BOOLEAN
    created_at : DATETIME
    expires_at : DATETIME
    last_used_at : DATETIME
    ==
    INDEX(token_hash)
}

TABLE(experiments) {
    PK(id) : INTEGER
    --
    name : VARCHAR
    description : VARCHAR
    status : VARCHAR
    created_at : DATETIME
}

TABLE(variants) {
    PK(id) : INTEGER
    --
    FK(experiment_id) : INTEGER
    name : VARCHAR
    traffic_percentage : FLOAT
    created_at : DATETIME
}

TABLE(assignments) {
    PK(id) : INTEGER
    --
    FK(experiment_id) : INTEGER
    FK(variant_id) : INTEGER
    user_id : VARCHAR
    assigned_at : DATETIME
    ==
    UNIQUE(experiment_id, user_id)
}

TABLE(events) {
    PK(id) : INTEGER
    --
    user_id : VARCHAR
    event_type : VARCHAR
    timestamp : DATETIME
    properties : JSON
    ==
    INDEX(user_id, timestamp)
    INDEX(event_type)
}

TABLE(feature_flags) {
    PK(id) : INTEGER
    --
    key : VARCHAR <<unique>>
    name : VARCHAR
    description : VARCHAR
    enabled : INTEGER
    rollout_percentage : FLOAT
    created_at : DATETIME
    updated_at : DATETIME
}

TABLE(feature_flag_overrides) {
    PK(id) : INTEGER
    --
    FK(feature_flag_id) : INTEGER
    user_id : VARCHAR
    enabled : INTEGER
    created_at : DATETIME
    ==
    UNIQUE(feature_flag_id, user_id)
}

TABLE(feature_flag_rollout_assignments) {
    PK(id) : INTEGER
    --
    FK(feature_flag_id) : INTEGER
    user_id : VARCHAR
    enabled : BOOLEAN
    assigned_at : DATETIME
    ==
    UNIQUE(feature_flag_id, user_id)
    INDEX(user_id)
}

experiments ||--o{ variants : "has"
experiments ||--o{ assignments : "has"
variants ||--o{ assignments : "assigned to"
feature_flags ||--o{ feature_flag_overrides : "has"
feature_flags ||--o{ feature_flag_rollout_assignments : "has"

note right of assignments
  Ensures idempotent
  user assignment
end note

note right of events
  Events linked to users
  via user_id field
  (not FK for flexibility)
end note

note left of experiments
  **Status values:**
  - draft
  - running
  - stopped
  - completed
end note

note left of variants
  **Traffic allocation:**
  Sum of all variants'
  traffic_percentage = 100%
end note

note right of feature_flags
  **Evaluation priority:**
  1. user_override
  2. enabled (global)
  3. rollout (stored in
     rollout_assignments)
  4. disabled (default)
end note

note left of feature_flag_rollout_assignments
  **Idempotent rollout:**
  Like experiment assignments,
  stores user's rollout decision
  persistently for consistency.
end note

note left of api_tokens
  **Token Security:**
  - SHA256 hashed storage
  - Original token never stored
  - Supports expiration
  - Soft delete via is_active
end note

@enduml
